# small_python_packages

./: .gitignore
bascat/: README.md  pyproject.toml
bascat/progs/: bascat  bascat.bat  bascat.ps1
bascat/rwt/: bascat.c  bascat.pyi
discordian/: README.md  pyproject.toml
discordian/progs/: ddate  ddate.bat  ddate.ps1
discordian/rwt/: discordian.py
discordian/tests/: test_ddates.py
epub/: .gitignore  README.md  pyproject.toml
epub/rwt/: epub.py
epub/src/rwt_epub/: __init__.py
gematria/: README.md  pyproject.toml
gematria/rwt/gematria/: english.py
gematria/tests/: test_english.py
romanized/: README.md  pyproject.toml
romanized/progs/: unromanize  unromanize.bat  unromanize.ps1
romanized/rwt/: romanized.py
romanized/tests/: test_greek.py  test_hebrew.py
spritz/: README.md  pyproject.toml
spritz/progs/: spritz  spritz.bat  spritz.ps1
spritz/rwt/spritz/: _internal.c  _internal.pyi  crypt.py  hash.py
wikiapi/: LICENSE  README.md  pyproject.toml
wikiapi/progs/: wiki-upload  wiki-upload.bat  wiki-upload.ps1
wikiapi/rwt/: wikiapi.py
wikiapi/src/rwt_wikiapi/: __init__.py  _cli.py
wikidata/: pyproject.toml
wikidata/progs/: pull_xref.py  push_xref.py
wikidata/rwt/wikidata/: tarot.py
wikitoc/: README.md  pyproject.toml
wikitoc/progs/: wb-toc  wb-toc.bat  wb-toc.ps1
wikitoc/rwt/: wikitoc.py
wikitoc/rwt/wikitoc/: book.py  xml.py
wikitoc/tests/: test_pages.py
