[project]
name = "rwt-epub"
version = "2.0.0"
description = "A tiny pure-Python EPUB 3 writer"
authors = [{ name = "Richard Todd" }]
requires-python = ">=3.13"
license = { text = "MIT" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Text Processing :: Markup",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Repository = "https://github.com/rwtodd/small_python_packages.git"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"
