[build-system]
requires = ["uv_build>=0.11.17,<0.12"]
build-backend = "uv_build"

[project]
name = "rwt-wikiapi"
version = "2.0.0"
description = "Lightweight Python client and CLI for pushing/pulling articles and media files to a MediaWiki site."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["requests>=2.28"]
authors = [{ name = "Richard Todd" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Wiki",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/rwtodd/small_python_packages/tree/main/wikiapi"
Repository = "https://github.com/rwtodd/small_python_packages.git"

[project.scripts]
wiki-xfer = "rwt_wikiapi._cli:main"

[tool.uv.build-backend]
module-root = "src"
module-name = "rwt_wikiapi"
